--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
+		<link rel="Stylesheet" href="/style.css"
 	</head>
 	<body>
 		<nav>
