--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="Stylesheet" href="/style.css"
+		<title> Toasty's Website </title>
+		<link rel="Stylesheet" href="/style.css">
 	</head>
 	<body>
 		<h1>
-			Hello There!
+			Welcome To The Toastiest Website On The Internet!
 		</h1>	
 	</body>
 </html>
